crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__bounded_multiplier_of_keywords.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(::stable_type_layout::TypeLayout)]
#[repr(C, u8)]
#[derive(
    ::csskit_derives::Parse,
    ::csskit_derives::Peek,
    ::csskit_derives::ToCursors,
    ::csskit_derives::ToSpan,
    ::csskit_derives::SemanticEq,
    ::csskit_derives::NodeWithMetadata,
    Debug,
    Clone,
    PartialEq,
    Eq,
    PartialOrd,
    Ord,
    Hash
)]
#[cfg_attr(feature = "serde", derive(serde::Serialize), serde())]
#[cfg_attr(feature = "visitable", derive(::csskit_derives::Visitable), visit(skip))]
pub enum FooKeywords<'a> {
    #[atom(CssAtomSet::Foo)]
    Foo(crate::KeywordValue<'a, ::css_parse::T![Ident]>),
    #[atom(CssAtomSet::Bar)]
    Bar(crate::KeywordValue<'a, ::css_parse::T![Ident]>),
}
#[cfg(test)]
::stable_type_layout::register!(FooKeywords < 'static >);
#[derive(Visitable, Parse)]
#[derive(::stable_type_layout::TypeLayout)]
#[repr(C)]
struct Foo<'a>(
    #[cfg_attr(feature = "visitable", visit(skip))]
    pub FooKeywords<'a>,
    #[cfg_attr(feature = "visitable", visit(skip))]
    pub Option<FooKeywords<'a>>,
);
#[cfg(test)]
::stable_type_layout::register!(Foo < 'static >);
