crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__bounded_range_multiplier_is_optimized_to_options.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
struct Foo(
    pub crate::AnimateableFeature,
    pub Option<crate::AnimateableFeature>,
    pub Option<crate::AnimateableFeature>,
);
