crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__bounded_range_multiplier_is_optimized_to_options_with_lifetimes_when_necessary.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(::stable_type_layout::TypeLayout)]
#[repr(C)]
struct Foo<'a>(
    pub crate::BorderTopColorStyleValue<'a>,
    pub Option<crate::BorderTopColorStyleValue<'a>>,
);
#[cfg(test)]
::stable_type_layout::register!(Foo < 'static >);
