crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__combinator_optional_all_keywords.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(Visitable, Parse)]
#[cfg_attr(test, derive(::stable_type_layout::TypeLayout))]
#[repr(C)]
#[parse(one_must_occur)]
struct Foo {
    #[cfg_attr(feature = "visitable", visit(skip))]
    #[atom(CssAtomSet::Foo)]
    pub foo: Option<::css_parse::T![Ident]>,
    #[cfg_attr(feature = "visitable", visit(skip))]
    #[atom(CssAtomSet::Bar)]
    pub bar: Option<::css_parse::T![Ident]>,
    #[cfg_attr(feature = "visitable", visit(skip))]
    #[atom(CssAtomSet::Baz)]
    pub baz: Option<::css_parse::T![Ident]>,
}
#[cfg(test)]
::stable_type_layout::register!(Foo);
