crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__combinator_optional_keywords_and_types.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(Parse)]
#[derive(::stable_type_layout::TypeLayout)]
#[repr(C)]
#[parse(one_must_occur)]
struct Foo<'a> {
    #[atom(CssAtomSet::Foo)]
    pub foo: Option<crate::KeywordValue<'a, ::css_parse::T![Ident]>>,
    pub bar: Option<crate::Value<'a, crate::Bar<'a>>>,
}
#[cfg(test)]
::stable_type_layout::register!(Foo < 'static >);
