crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__combinator_optional_last_keyword.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(Visitable, Parse)]
#[derive(::stable_type_layout::TypeLayout)]
#[repr(C, u8)]
enum Foo<'a> {
    #[cfg_attr(feature = "visitable", visit(skip))]
    #[atom(CssAtomSet::Foo)]
    Foo(::css_parse::T![Ident]),
    Bar(
        #[cfg_attr(feature = "visitable", visit(skip))]
        #[atom(CssAtomSet::Bar)]
        ::css_parse::T![Ident],
        Option<crate::Value<'a, crate::Color<'a>>>,
    ),
}
#[cfg(test)]
::stable_type_layout::register!(Foo < 'static >);
