crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__custom_function_all_optionals.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(::stable_type_layout::TypeLayout)]
#[repr(C)]
struct Foo<'a> {
    pub caret_color: Option<crate::CaretColorStyleValue<'a>>,
    pub caret_animation: Option<crate::CaretAnimationStyleValue<'a>>,
    pub caret_shape: Option<crate::CaretShapeStyleValue<'a>>,
}
#[cfg(test)]
::stable_type_layout::register!(Foo < 'static >);
