crates/csskit_proc_macro/src/test/snapshots/csskit_proc_macro__test__test_generate__custom_function_variant_with_args.snap
---
source: crates/csskit_proc_macro/src/test/test_generate.rs
expression: pretty
---
#[derive(Parse)]
enum Foo<'a> {
    #[atom(CssAtomSet::FitContent)]
    FitContent(::css_parse::T![Ident]),
    FitContentFunction(crate::FitContentFunction<'a>),
}
